--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="assets/Alberdi-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/Alem-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/Alem-01.jpg class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="assets/Concepción-01.jpg" class="d-block w-100" alt="...">
