se agregó boton de wsp

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </html>
 </head>
 <body>
+  <div class="whatsapp">
+    <a href="https://api.whatsapp.com/send/?phone=5493814146917&text=Hola+tengo+una+consulta&type=phone_number&app_absent=0" target="_blank"> 
+    <img src="assets/WhatsApp_icon.png.webp" class="img-fluid" alt="">
+  </a>
+  </div>
     
   <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
