--- a/index.html
+++ b/index.html
@@ -19,34 +19,34 @@
   <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="assets/Aguilares-01.jpg" class="d-block w-100" alt="...">
+          <img src="assets/1-Aguilares-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/Alberdi-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/2-Alberdi-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/Alem-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/3-Alem-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/Concepción-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/4- Concepción-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/Famaillá-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/5 -Famaillá-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/Manantial-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/6-Manantial-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/Metán-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/7- Monteros-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/Monteros-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/8-Metán-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/Salta-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/9 - Salta-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/Tafi-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/10- Tafi-01.jpg" class="d-block w-100" alt="...">
           </div>
           
     </div>
