--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </html>
 </head>
-<body>
+<body class="con px-0 offset-md-4">
   <div class="whatsapp">
     <a href="https://api.whatsapp.com/send/?phone=5493814146917&text=Hola+tengo+una+consulta&type=phone_number&app_absent=0" target="_blank"> 
     <img src="assets/WhatsApp_icon.png.webp" class="img-fluid" alt="">
