--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
             <img src="assets/2-Alberdi-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/3-Alem-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/3-Alem.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/4- Concepción-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/4-concepcion.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="assets/5 -Famaillá-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/6-Manantial-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/6-manantial.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="assets/7- Monteros-01.jpg" class="d-block w-100" alt="...">
@@ -43,7 +43,7 @@
             <img src="assets/8-Metán-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/9 - Salta-01.jpg" class="d-block w-100" alt="...">
+            <img src="assets/9-Salta.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="assets/10- Tafi-01.jpg" class="d-block w-100" alt="...">
