--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img src="assets/8-Metán-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/9-Salta.jpeg" class="d-block w-100" alt="...">
+            <img src="assets/9-Salta -WhatsApp M - Copy.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="assets/10- Tafi-01.jpg" class="d-block w-100" alt="...">
